--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/react": "^18.3.5",
+    "@types/react-dom": "^18.3.0",
     "better-sqlite3": "^11.2.1",
     "next": "14.0.3",
     "react": "^18",
